--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Toolbar -->
   <header class="toolbar">
     <h1 onclick="openPage('restaurants.html', event)">المطاعم</h1>
-    <h1 onclick="openPage('cafes.html', event)">الكافيهات</h1>
+    <h1 onclick="openPage('cafe.html', event)">الكافيهات</h1>
     <h1 onclick="openPage('explore.html', event)"> استكشاف العروض المميزة</h1>
     <div class="menu-btn" onclick="toggleMenu()">⋮</div>
     <ul class="dropdown" id="dropdown">
@@ -29,3 +29,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
