--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://unpkg.com/@supabase/supabase-js"><script>
   // استبدلي بالقيم من Supabase
-  const SUPABASE_KEY ="https://qnqttucsrwpesxkzeovu.supabase.co";
-  const SUPABASE_KEY = "YOUR-ANON-KEY";
+  const SUPABASE_URL ="https://qnqttucsrwpesxkzeovu.supabase.co";
+  const SUPABASE_KEY = "sb_secret_gfvQ6JKePwzjnMJJ_2RYqw_y1RHMw30";
 
   const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
@@ -64,6 +64,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
